create card component

--- a/src/styles/Index.scss
+++ b/src/styles/Index.scss
@@ -1,11 +1,15 @@
 // index.js style sheet
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
-
+@import './Mixins.scss';
+@import './Vars.scss';
 // styles for all html elements
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto';
+    color: $white;
+    // border: 1px solid red;
 }
+
