--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,7 +3,6 @@
 .container{
     width: 100%;
     height:100%;
-    background-color: pink;
     @include center();
     flex-wrap: wrap;
     flex-direction: row;
@@ -13,21 +12,22 @@
 
 /* width */
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 10px;
   }
   
   /* Track */
   ::-webkit-scrollbar-track {
     background: $dark3; 
+    border-radius: 0 0 10px 0;
   }
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: $light; 
+    background: $dark2; 
     border-radius: 5px;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background: $light; 
   }
