--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -1,16 +1,21 @@
+// import variables and mixins
 @import './Vars.scss';
 @import './Mixins.scss';
 
 
-
+// main card component styles
 .card{
+    margin-bottom: 35px;
+    // display flex for direction column
     display: flex;
     flex-direction: column;
+    // set widh and height
     width: 30%;
     height: 78vh;
     background-color: $dark3;
     border-radius: $radius;
     .top{
+        // top part of card
         padding: 35px;
         display: flex;
         flex-direction: column;
@@ -21,7 +26,6 @@
             height: 100%;
             border-radius: $radius;
             background-color: $dark;
-            // margin-bottom: 35px;
         }
         .top-text{
             height: 20%;
@@ -32,15 +36,17 @@
         }
     }
     .bottom{
+        // bottom part of card
         height: 30%;
         width: 100%;
         background-color: $dark;
-
         border-radius: 0 0 $radius $radius;
-        overflow-y: scroll;
+        // overflow-y scroll to have ability to scroll through comments
+
         form{
+            // form styles
             padding: 0 35px;
-            margin-top: 5px;
+            margin: 5px 0 10px 0;
             display: flex;
             width: 100%;
             height: 40px;
@@ -53,17 +59,45 @@
                 border-radius: 20px 0 0 20px;
             }
             button{
+                color: $white;
                 background-color: $dark3;
                 border: none;
                 padding: 0 20px;
                 border-radius:0 20px 20px 0;
                 text-transform: uppercase;
+                transition: 0.2s;
+                // cusror pointer for submit button
                 cursor: pointer;
+                &:hover{
+                    background-color: #474747;
+                }
             }
+            // set input placehoder color
+            ::placeholder {
+                color: $white;
+                opacity: 1; 
+              }
+              
         }
         .comments{
+            overflow-y: scroll;
             width: 100%;
+            height: calc(100% - 55px);
+            &::-webkit-scrollbar{
+                width: 10px;
+                background-color: $dark3;
+                border-radius: 0 0 10px 0;
+            }
+            &::-webkit-scrollbar-thumb {
+                background: $dark1; 
+                border-radius: 5px 5px 10px 5px;
+
+              }
+             &::-webkit-scrollbar-thumb:hover {
+                background: $light; 
+              }
             .comment{
+                // comment styles
                 width: 100%;
                 border-bottom: 1px solid $dark3;
                 padding: 20px 35px 10px;
@@ -84,12 +118,75 @@
                         font-size: 12px;
                     }
                 }
-                
+                &:last-child{
+                    border-bottom: none;
+                }
+
             }
+            
         }
     }
 }
-::placeholder {
-    color: $white;
-    opacity: 1; /* Firefox */
+
+
+
+@media screen and (max-width: 1200px){
+    .card{
+      width: 100%;     
+      height: 50vh;
+      flex-direction: row;
+      .top{
+        height: 100%;
+        width: 40%;
+        flex-direction: column-reverse;
+        gap: 35px;
+        .top-text{
+            margin-top: 0;
+        }
+      } 
+      .bottom{
+        width: 60%;
+        height: 100%;
+        border-radius: 0 10px 10px 0;
+      }
+    }
+  }
+
+  @media screen and (max-width: 640px){
+    .card{
+        h3{
+            font-size: 16px;
+        }
+        h4{font-size: 15px;}
+        p{font-size: 12px;}
+        
+      width: 100%;     
+      height: 75vh;
+      flex-direction: column;
+      .top{
+        height: 65%;
+        width: 100%;
+        flex-direction:column;
+        gap: 20px;
+        padding: 25px;
+        .top-text{
+            margin-top: 0;
+
+            
+        }
+      } 
+      .bottom{
+        width: 100%;
+        height: 35%;
+        border-radius: 0 0 10px 10px;
+        form{
+            padding:0 25px;
+        }
+        .comments{
+            .comment{
+                padding: 15px 25px;
+            }
+        }
+      }
+    }
   }
