--- a/src/styles/Index.scss
+++ b/src/styles/Index.scss
@@ -9,7 +9,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto';
-    color: $white;
+    // color: $white;
     // border: 1px solid red;
 }
 
