--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -42,7 +42,7 @@ nav{
     width: 100%;
     height: 60px;
     button{
-        color: white;
+        color: $light;
         background: none;
         border: none;
         display: block;
@@ -93,6 +93,9 @@ nav.active{
     nav{
         ul{
             width: 25%;
+            li{
+                margin: 0 10px;
+            }
         }
     }
 }
